--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-!
 <!DOCTYPE html>
 <html>
 
@@ -8,7 +7,8 @@
 </head>
 
 <body>
-
+    <div id="root"></div>
+    <script src="./dist/main.js"></script>
 </body>
 
 </html>
